--- a/.github/workflows/cyberowl_CI.yml
+++ b/.github/workflows/cyberowl_CI.yml
@@ -3,11 +3,11 @@ name: cyberowl CI
 on:
   push:
     branches:
-      - main
+      - dev
   
   pull_request:
     branches:
-      - main
+      - dev
 
 jobs: 
   build:
