Add needs section to yml github actions

--- a/.github/workflows/cyberowl_CI.yml
+++ b/.github/workflows/cyberowl_CI.yml
@@ -33,6 +33,7 @@ jobs:
         python3 -m coverage report
   
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
