--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           python-version: '3.9'
           architecture: 'x64'
+      - run: python -m pip install -r requirements.txt
       - run: python main.py
 
       - name: Commit changes
