--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Commit changes
         uses: EndBug/add-and-commit@v8
         with:
-          author_name: Karim Habouch
-          author_email: karim.habush@gmail.com
+          author_name: GitHub Action
+          author_email: action@github.com
           message: 'Automatic update with GitHub Actions'
           add: 'README.md'
 
