--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: '3.9'
           architecture: 'x64'
+      - run: python -m pip install poetry
       - run: python -m poetry install
       - run: python src/main.py
 
