--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,17 +19,17 @@ repos:
     hooks:
       - id: isort
         args: ["--profile", "black"]
-  # - repo: https://gitlab.com/pycqa/flake8
-  #   rev: 3.9.2
-  #   hooks:
-  #     - id: flake8
-  #       additional_dependencies: [
-  #           "flake8-bugbear",
-  #           "flake8-comprehensions",
-  #           "flake8-mutable",
-  #           "flake8-print",
-  #           "flake8-simplify",
-  #       ]
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        additional_dependencies: [
+            "flake8-bugbear",
+            "flake8-comprehensions",
+            "flake8-mutable",
+            "flake8-print",
+            "flake8-simplify",
+        ]
   - repo: https://github.com/humitos/mirrors-autoflake
     rev: v1.3
     hooks:
