--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ selenium = "3.141.0"
 msedge-selenium-tools = "3.141.4"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
