--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,12 @@ python = ">=3.7"
 Scrapy = "2.6.2"
 selenium = "3.141.0"
 msedge-selenium-tools = "3.141.4"
-pre-commit = "^2.20.0"
+mkdocs = "^1.3.1"
+mkdocs-material = "^8.4.0"
+mkdocstrings = {extras = ["python"], version = "^0.19.0"}
 
 [tool.poetry.dev-dependencies]
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
