--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A daily updated summary of the most frequent security incidents c
 authors = ["karimhabush <karim.habush@gmail.com>"]
 license = "MIT"
 
+
 [tool.poetry.dependencies]
 python = ">=3.7"
 Scrapy = "2.6.2"
@@ -13,10 +14,11 @@ msedge-selenium-tools = "3.141.4"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
 mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+pytest = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
