--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ msedge-selenium-tools = "3.141.4"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
 mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+betamax = "^0.8.1"
+pytest-vcr = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
