--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.7"
-Scrapy = "2.6.2"
+Scrapy = "^2.6.2"
 selenium = "3.141.0"
 msedge-selenium-tools = "3.141.4"
 mkdocs = "^1.3.1"
 mkdocs-material = "^8.4.0"
 mkdocstrings = {extras = ["python"], version = "^0.19.0"}
+pyOpenSSL = "22.0.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.20.0"
