--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -28,3 +28,28 @@ jobs:
           git add README.md
           git commit -m "Automatic update with GitHub Actions"
           git push origin ${GITHUB_REF##*/}
+    
+  deploy: # This job will only run if the previous job was successful, it will deploy the changes to the /docs folder to s3 bucket
+    needs: run-and-commit
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        aws-region: ${{ secrets.AWS_REGION }}
+    
+    - name: Copy the files from /docs/.vuepress/dist to s3 bucket
+      run: |
+        aws s3 sync ./docs/.vuepress/dist/* s3://$AWS_BUCKET_NAME --delete
+
+      
+
+
+
+        
