--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -37,7 +37,17 @@ jobs:
       contents: write
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+    - name: Install dependencies
+      run: |
+        npm install
+    - name: Build
+      run: |
+        npm run docs:build
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -47,9 +57,3 @@ jobs:
     - name: Copy the files from /docs/.vuepress/dist to s3 bucket
       run: |
         aws s3 sync ./docs/.vuepress/dist/* s3://$AWS_BUCKET_NAME --delete
-
-      
-
-
-
-        
