--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -56,4 +56,4 @@ jobs:
     
     - name: Copy the files from /docs/.vuepress/dist to s3 bucket
       run: |
-        aws s3 sync ./docs/.vuepress/dist/* s3://$AWS_BUCKET_NAME --delete
+        aws s3 sync ./docs/.vuepress/dist s3://$AWS_S3_BUCKET_NAME --delete
