--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -1,8 +1,10 @@
 name: auto_update_cron_job
 
 on:
-  schedule:
-    - cron: '0 9,21 * * *'
+  schedule: # Runs every hour at 0 minutes
+    - cron: '0 * * * *'
+  branch:
+    - dev
   workflow_dispatch:
 
 jobs:
@@ -28,7 +30,7 @@ jobs:
           git add README.md
           git commit -m "Automatic update with GitHub Actions"
           git push origin ${GITHUB_REF##*/}
-    
+
   deploy: # This job will only run if the previous job was successful, it will deploy the changes to the /docs folder to s3 bucket
     needs: run-and-commit
     runs-on: ubuntu-latest
@@ -53,7 +55,7 @@ jobs:
       with:
         role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
         aws-region: ${{ secrets.AWS_REGION }}
-    
+
     - name: Copy the files from /docs/.vuepress/dist to s3 bucket
       run: |
         aws s3 sync ./docs/.vuepress/dist s3://${{ secrets.AWS_S3_BUCKET_NAME }} --delete
