--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -46,6 +46,8 @@ jobs:
       run: |
         npm install
     - name: Build
+      env:
+        GA_ID: ${{ secrets.GA_ID }}
       run: |
         npm run docs:build
     - name: Configure AWS credentials
