--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     rev: 1.7.4
     hooks:
       - id: bandit
-        args: [ "-iii", "-ll" ]
+        args: ["-iii", "-ll"]
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
@@ -23,13 +23,14 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-        additional_dependencies: [
+        additional_dependencies:
+          [
             "flake8-bugbear",
             "flake8-comprehensions",
             "flake8-mutable",
             "flake8-print",
             "flake8-simplify",
-        ]
+          ]
   - repo: https://github.com/humitos/mirrors-autoflake
     rev: v1.3
     hooks:
