--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Commit
         run: |
-          git add README.md
+          git add .
           git commit -m "Automatic update with GitHub Actions"
           git push origin ${GITHUB_REF##*/}
 
