--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vuepress/plugin-docsearch": "^2.0.0-beta.60",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.60",
     "@vuepress/plugin-register-components": "^2.0.0-beta.60",
-    "@vuepress/plugin-shiki": "^2.0.0-beta.60"
+    "@vuepress/plugin-shiki": "^2.0.0-beta.60",
+    "axios": "^1.3.4"
   }
 }
