--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -91,4 +91,4 @@ jobs:
 
     - name: Copy the files from /docs/.vuepress/dist to s3 bucket
       run: |
-        aws s3 sync ./docs/.vuepress/dist s3://${{ secrets.AWS_S3_BUCKET_NAME }} --delete
+        aws s3 sync ./docs/.vuepress/dist/activity s3://${{ secrets.AWS_S3_BUCKET_NAME }}/activity --delete
