--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -41,11 +41,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
           sudo apt-get install -y google-chrome-stable
-          wget https://chromedriver.storage.googleapis.com/$(curl https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip
+          CHROME_VERSION=$(google-chrome --version | awk '{print $3}' | cut -d '.' -f 1)
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+          wget "https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip"
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/bin/chromedriver
           sudo chown root:root /usr/bin/chromedriver
           sudo chmod +x /usr/bin/chromedriver
+          rm chromedriver_linux64.zip
       - run: python -m poetry run python src/cyberowl/main.py
       - name: Setup git config
         run: |
