--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-+ name: Setup Node.js environment
+ l3aalteshuva : Setup Node.js environment
   uses: actions/setup-node@v3.8.1
   with:
     # Set always-auth in npmrc.
