--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
  l3aalteshuva : Setup Node.js environment
-  uses: actions/setup-node@v3.8.1
+  uses: lfs
   with:
     # Set always-auth in npmrc.
     always-auth: # optional, default is false
